# PR-Jovi_GLSL-b8ad1f53

./: .gitignore  LICENSE  README.md  __init__.py  node_list.json  pyproject.toml  requirements.txt
core/: __init__.py  glsl.py  glsl_manager.py  glsl_shader.py  vector.py
glsl/.lib/: blend.lib  camera.lib  color.lib  const.lib  convert.lib  curve.lib  noise.lib  physics.lib  sdf.lib  shading.lib  vector.lib
glsl/.lib/noise/: noise_billowed.lib  noise_blue.lib  noise_curl.lib  noise_dither.lib  noise_dither_blue.lib  noise_erosion.lib  noise_fbm.lib  noise_flow.lib  noise_fractal.lib  noise_grad.lib  noise_hash.lib  noise_hybrid.lib  noise_param.lib  noise_perlin.lib  noise_rand.lib  noise_ridge.lib  noise_river.lib  noise_simplex.lib  noise_smooth.lib  noise_space_cosmic.lib  noise_space_galaxy.lib  noise_space_nebula.lib  noise_space_stars.lib  noise_spiral.lib  noise_swiss.lib  noise_terraced.lib  noise_turbulence.lib  noise_value.lib  noise_voronoi.lib  noise_warp.lib  noise_worley.lib
glsl/color/: color-hsv.frag  color-invert.frag  color-pixelate.frag  color-posterize.frag
glsl/create/: create-gradient_cone.frag  create-normal.frag  create-palette.frag
glsl/filter/: filter-minmax.frag  filter-range.frag  filter-sobel.frag
glsl/noise/: noise-perlin.frag  noise-simplex.frag  noise-worley.frag
glsl/transform/: trans-transform.frag
web/: node_glsl.js  node_glsl_dynamic.js  util_jov.js  widget_vector.js
